testsuite/tests/grammar/invalid_lkt/two_grammar_files.lkt
import lexer_example
import basic

@with_lexer(foo_lexer) grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
